# wasm-worker-threads

./: .gitignore  Cargo.toml  README.md  index.js  isolated-threadpool-worker.cjs  main.cjs  manual-bindings.md  node-backend.cjs  node-worker.cjs  nodejs.cjs  package-lock.json  package.json  patch-env.js  server.cjs  threadpool-host.cjs  threadpool-manager-worker.cjs  threadpool-manager.cjs  threadpool-runner.cjs  threadpool-worker.cjs  webpack.config.js  workers.cjs
.cargo/: config.toml
src/: lib.rs  threadpool_manager.rs  utils.rs
tests/: web.rs
webpack/: index.html  index.js
