[package]
name = "blog-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
rayon = "1.10.0"
wasm-bindgen = "0.2.89" 

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[profile.dev]
debug = true
