[package]
name = "blog-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
rayon = "1.10.0"
spmc = "0.3.0"
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "0.4.1"
#wasm-bindgen-futures = "0.4.50"
#web-sys = "0.3.77"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[profile.dev]
debug = true
panic = "unwind"

[profile.release]
panic = "unwind"
